2006-10-06  Michal Nazarewicz  <mina86/AT/mina86.com>

	* tuptime.c: + conforming to C89 (I hope)
	* xgetclass.c: + conforming to C89 (I hope)

	* pingrange.pl: + more address range formats added
	+ can specify several ranges

	* mpd-show.c: + name->state was not changed after error
	+ DEFAULT_FORMAT altered

	* tv: + downloads programm for only one day instead of two

2006-10-02  Michal Nazarewicz  <mina86/AT/mina86.com>

	* gz2bz: + bug fixed when GZIP environment variable was set
	+ several tiny changes and fixes

2006-10-01  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mpd-show.c: + division by zero bug fixed

	* README: + tv added
	* tv: New file

2006-09-29  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile, README: + changelog.pl added
	* changelog.pl: New file

	* traf.sh: + parametrised
	+ display changed

	* mpd-show.c: + usage() fixed
	+ columns read COLUMNS env variable
	+ disc, comment, filenoext, pathnoext, dir tags added

	* libmpdclient.c, libmpdclient.h: + new version

	* mpd-show.c: + a bit rewritten
	+ supports formatting, added -f option
	+ scrolls title if too long

2006-09-28  Michal Nazarewicz  <mina86/AT/mina86.com>

	* README, slack-desc: + description changed
	+ email updated

2006-09-25  Michal Nazarewicz  <mina86/AT/mina86.com>

	* SlackBuild.gen: + New file

2006-09-14  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes.txt: + new quotes

	* lesspipe: + bug fixed when installing pipe
	+ better handling of temporary file names
	+ bug fixed in lessopen (file name was written to temp file)

	* null.c: -b and -B switches added
	+ -d/-D now performs "real" daemonization

	* check.sh: + check_proc() uses pkill if present
	+ better handling of temporary file
	+ '-n' added after '[' where needed for better portability

2006-08-08  Michal Nazarewicz  <mina86/AT/mina86.com>

	* tpwd: + fixed bug with options passed to bash function

2006-08-03  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile, README: + show added
	* show: New file
